Kubernetes/IngressController/Ingress/ingress_simples.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simples
  labels:
    name: ingress-simples
spec:
  IngressClassName: nginx
  rules:
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-green
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  labels:
    name: ingress-path
  annotation:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  IngressClassName: nginx
  rules:
    http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: web-blue
            port: 
              number: 80
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: web-green
            port: 
              number: 80
